Ran build playbooks

--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/leaf1.cfg
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/leaf1.cfg
@@ -34,6 +34,8 @@ vlan 4094
    name MLAG_PEER
    trunk group MLAG
 !
+vrf instance MGMT
+!
 vrf instance VRF_A
 !
 interface Port-Channel1
@@ -77,7 +79,7 @@ interface Ethernet4
    ip address 192.168.103.3/31
 !
 interface Ethernet7
-   description host1_Ethernet1
+   description host1
    no shutdown
    channel-group 7 mode active
 !
@@ -94,6 +96,7 @@ interface Loopback1
 interface Management0
    description oob_management
    no shutdown
+   vrf MGMT
    ip address 192.168.0.21/24
 !
 interface Vlan10
@@ -140,6 +143,7 @@ interface Vxlan1
 ip virtual-router mac-address 00:1c:73:00:00:99
 !
 ip routing
+no ip routing vrf MGMT
 ip routing vrf VRF_A
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -154,7 +158,7 @@ mlag configuration
    reload-delay mlag 300
    reload-delay non-mlag 330
 !
-ip route 0.0.0.0/0 192.168.0.1
+ip route vrf MGMT 0.0.0.0/0 192.168.0.1
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -170,10 +174,6 @@ router bgp 65100
    router-id 192.168.101.1
    maximum-paths 4 ecmp 4
    no bgp default ipv4-unicast
-   no bgp default ipv4-unicast
-   distance bgp 20 200 200
-   graceful-restart restart-time 300
-   graceful-restart
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
@@ -232,7 +232,7 @@ management api http-commands
    protocol https
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 !
 end
