--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/leaf4.cfg
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/leaf4.cfg
@@ -34,6 +34,8 @@ vlan 4094
    name MLAG_PEER
    trunk group MLAG
 !
+vrf instance MGMT
+!
 vrf instance VRF_A
 !
 interface Port-Channel1
@@ -72,7 +74,7 @@ interface Ethernet9
    no shutdown
    no switchport
    vrf VRF_A
-   ip address 10.1.5.1/24
+   ip address 10.1.5.0/31
 !
 interface Loopback0
    description EVPN_Overlay_Peering
@@ -87,6 +89,7 @@ interface Loopback1
 interface Management0
    description oob_management
    no shutdown
+   vrf MGMT
    ip address 192.168.0.24/24
 !
 interface Vlan10
@@ -133,6 +136,7 @@ interface Vxlan1
 ip virtual-router mac-address 00:1c:73:00:00:99
 !
 ip routing
+no ip routing vrf MGMT
 ip routing vrf VRF_A
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -147,7 +151,7 @@ mlag configuration
    reload-delay mlag 300
    reload-delay non-mlag 330
 !
-ip route 0.0.0.0/0 192.168.0.1
+ip route vrf MGMT 0.0.0.0/0 192.168.0.1
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -159,14 +163,10 @@ route-map RM-MLAG-PEER-IN permit 10
 router bfd
    multihop interval 1200 min-rx 1200 multiplier 3
 !
-router bgp 65102
+router bgp 65299
    router-id 192.168.101.4
    maximum-paths 4 ecmp 4
    no bgp default ipv4-unicast
-   no bgp default ipv4-unicast
-   distance bgp 20 200 200
-   graceful-restart restart-time 300
-   graceful-restart
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
@@ -177,7 +177,7 @@ router bgp 65102
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER peer group
-   neighbor MLAG-IPv4-UNDERLAY-PEER remote-as 65102
+   neighbor MLAG-IPv4-UNDERLAY-PEER remote-as 65299
    neighbor MLAG-IPv4-UNDERLAY-PEER next-hop-self
    neighbor MLAG-IPv4-UNDERLAY-PEER description leaf3
    neighbor MLAG-IPv4-UNDERLAY-PEER send-community
@@ -218,18 +218,18 @@ router bgp 65102
       route-target import evpn 10:10
       route-target export evpn 10:10
       router-id 192.168.101.4
-      neighbor 10.1.5.254 remote-as 1
+      neighbor 10.1.5.1 remote-as 65534
       neighbor 10.255.251.4 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
       !
       address-family ipv4
-         neighbor 10.1.5.254 activate
+         neighbor 10.1.5.1 activate
 !
 management api http-commands
    protocol https
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 !
 end
