--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/superspine2.cfg
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/superspine2.cfg
@@ -14,6 +14,8 @@ spanning-tree mode none
 no enable password
 no aaa root
 !
+vrf instance MGMT
+!
 interface Ethernet3
    description P2P_LINK_TO_SPINE1_Ethernet8
    no shutdown
@@ -50,14 +52,16 @@ interface Loopback0
 interface Management0
    description oob_management
    no shutdown
+   vrf MGMT
    ip address 192.168.0.26/24
 !
 ip routing
+no ip routing vrf MGMT
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.101.0/24 eq 32
 !
-ip route 0.0.0.0/0 192.168.0.1
+ip route vrf MGMT 0.0.0.0/0 192.168.0.1
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -69,8 +73,6 @@ router bgp 65000
    router-id 192.168.101.202
    maximum-paths 4 ecmp 4
    no bgp default ipv4-unicast
-   no bgp default ipv4-unicast
-   distance bgp 20 200 200
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS next-hop-unchanged
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
@@ -118,7 +120,7 @@ management api http-commands
    protocol https
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 !
 end
