--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/leaf3.cfg
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/leaf3.cfg
@@ -34,6 +34,8 @@ vlan 4094
    name MLAG_PEER
    trunk group MLAG
 !
+vrf instance MGMT
+!
 vrf instance VRF_A
 !
 interface Port-Channel1
@@ -43,6 +45,13 @@ interface Port-Channel1
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
+!
+interface Port-Channel7
+   description host2_PortChannel host2
+   no shutdown
+   switchport
+   switchport access vlan 20
+   spanning-tree portfast
 !
 interface Ethernet1
    description MLAG_PEER_leaf4_Ethernet1
@@ -68,6 +77,11 @@ interface Ethernet6
    no switchport
    ip address 192.168.103.11/31
 !
+interface Ethernet7
+   description host2
+   no shutdown
+   channel-group 7 mode active
+!
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
@@ -81,6 +95,7 @@ interface Loopback1
 interface Management0
    description oob_management
    no shutdown
+   vrf MGMT
    ip address 192.168.0.23/24
 !
 interface Vlan10
@@ -127,6 +142,7 @@ interface Vxlan1
 ip virtual-router mac-address 00:1c:73:00:00:99
 !
 ip routing
+no ip routing vrf MGMT
 ip routing vrf VRF_A
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -141,7 +157,7 @@ mlag configuration
    reload-delay mlag 300
    reload-delay non-mlag 330
 !
-ip route 0.0.0.0/0 192.168.0.1
+ip route vrf MGMT 0.0.0.0/0 192.168.0.1
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -153,14 +169,10 @@ route-map RM-MLAG-PEER-IN permit 10
 router bfd
    multihop interval 1200 min-rx 1200 multiplier 3
 !
-router bgp 65102
+router bgp 65299
    router-id 192.168.101.3
    maximum-paths 4 ecmp 4
    no bgp default ipv4-unicast
-   no bgp default ipv4-unicast
-   distance bgp 20 200 200
-   graceful-restart restart-time 300
-   graceful-restart
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
@@ -171,7 +183,7 @@ router bgp 65102
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER peer group
-   neighbor MLAG-IPv4-UNDERLAY-PEER remote-as 65102
+   neighbor MLAG-IPv4-UNDERLAY-PEER remote-as 65299
    neighbor MLAG-IPv4-UNDERLAY-PEER next-hop-self
    neighbor MLAG-IPv4-UNDERLAY-PEER description leaf4
    neighbor MLAG-IPv4-UNDERLAY-PEER send-community
@@ -219,7 +231,7 @@ management api http-commands
    protocol https
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 !
 end
