--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/spine1.cfg
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/configs/spine1.cfg
@@ -14,6 +14,8 @@ spanning-tree mode none
 no enable password
 no aaa root
 !
+vrf instance MGMT
+!
 interface Ethernet3
    description P2P_LINK_TO_LEAF1_Ethernet3
    no shutdown
@@ -29,14 +31,14 @@ interface Ethernet4
    ip address 192.168.103.4/31
 !
 interface Ethernet7
-   description P2P_LINK_TO_BORDERLEAF1_Ethernet3
+   description P2P_LINK_TO_SUPERSPINE1_Ethernet3
    no shutdown
    mtu 1500
    no switchport
    ip address 192.168.103.41/31
 !
 interface Ethernet8
-   description P2P_LINK_TO_BORDERLEAF2_Ethernet3
+   description P2P_LINK_TO_SUPERSPINE2_Ethernet3
    no shutdown
    mtu 1500
    no switchport
@@ -50,14 +52,16 @@ interface Loopback0
 interface Management0
    description oob_management
    no shutdown
+   vrf MGMT
    ip address 192.168.0.11/24
 !
 ip routing
+no ip routing vrf MGMT
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.101.0/24 eq 32
 !
-ip route 0.0.0.0/0 192.168.0.1
+ip route vrf MGMT 0.0.0.0/0 192.168.0.1
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -69,8 +73,6 @@ router bgp 65001
    router-id 192.168.101.11
    maximum-paths 4 ecmp 4
    no bgp default ipv4-unicast
-   no bgp default ipv4-unicast
-   distance bgp 20 200 200
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS next-hop-unchanged
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
@@ -89,10 +91,10 @@ router bgp 65001
    neighbor 192.168.101.2 description leaf2
    neighbor 192.168.101.201 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.101.201 remote-as 65000
-   neighbor 192.168.101.201 description borderleaf1
+   neighbor 192.168.101.201 description superspine1
    neighbor 192.168.101.202 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.101.202 remote-as 65000
-   neighbor 192.168.101.202 description borderleaf2
+   neighbor 192.168.101.202 description superspine2
    neighbor 192.168.103.1 peer group IPv4-UNDERLAY-PEERS
    neighbor 192.168.103.1 remote-as 65100
    neighbor 192.168.103.1 description leaf1_Ethernet3
@@ -101,10 +103,10 @@ router bgp 65001
    neighbor 192.168.103.5 description leaf2_Ethernet3
    neighbor 192.168.103.40 peer group IPv4-UNDERLAY-PEERS
    neighbor 192.168.103.40 remote-as 65000
-   neighbor 192.168.103.40 description borderleaf1_Ethernet3
+   neighbor 192.168.103.40 description superspine1_Ethernet3
    neighbor 192.168.103.42 peer group IPv4-UNDERLAY-PEERS
    neighbor 192.168.103.42 remote-as 65000
-   neighbor 192.168.103.42 description borderleaf2_Ethernet3
+   neighbor 192.168.103.42 description superspine2_Ethernet3
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
@@ -118,7 +120,7 @@ management api http-commands
    protocol https
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 !
 end
