--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/leaf4.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/leaf4.yml
@@ -1,12 +1,7 @@
 hostname: leaf4
 router_bgp:
-  as: '65102'
+  as: '65299'
   router_id: 192.168.101.4
-  bgp_defaults:
-  - no bgp default ipv4-unicast
-  - distance bgp 20 200 200
-  - graceful-restart restart-time 300
-  - graceful-restart
   bgp:
     default:
       ipv4_unicast: false
@@ -16,7 +11,7 @@ router_bgp:
   peer_groups:
   - name: MLAG-IPv4-UNDERLAY-PEER
     type: ipv4
-    remote_as: '65102'
+    remote_as: '65299'
     next_hop_self: true
     description: leaf3
     maximum_routes: 12000
@@ -86,11 +81,11 @@ router_bgp:
     neighbors:
     - ip_address: 10.255.251.4
       peer_group: MLAG-IPv4-UNDERLAY-PEER
-    - ip_address: 10.1.5.254
-      remote_as: '1'
+    - ip_address: 10.1.5.1
+      remote_as: '65534'
     address_family_ipv4:
       neighbors:
-      - ip_address: 10.1.5.254
+      - ip_address: 10.1.5.1
         activate: true
   vlan_aware_bundles:
   - name: VRF_A
@@ -102,7 +97,7 @@ router_bgp:
     - learned
     vlan: 10,20
 static_routes:
-- vrf: default
+- vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
   gateway: 192.168.0.1
 service_routing_protocols_model: multi-agent
@@ -119,7 +114,7 @@ spanning_tree:
     priority: 16384
   no_spanning_tree_vlan: 4093-4094
 vrfs:
-- name: default
+- name: MGMT
   ip_routing: false
 - name: VRF_A
   tenant: ACME
@@ -128,13 +123,13 @@ management_interfaces:
 - name: Management0
   description: oob_management
   shutdown: false
-  vrf: default
+  vrf: MGMT
   ip_address: 192.168.0.24/24
   gateway: 192.168.0.1
   type: oob
 management_api_http:
   enable_vrfs:
-  - name: default
+  - name: MGMT
   enable_https: true
 vlans:
 - id: 4093
@@ -240,7 +235,7 @@ ethernet_interfaces:
   ip_address: 192.168.103.15/31
 - name: Ethernet9
   peer_type: l3_interface
-  ip_address: 10.1.5.1/24
+  ip_address: 10.1.5.0/31
   shutdown: false
   type: routed
   vrf: VRF_A
