--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/spine1.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/spine1.yml
@@ -2,9 +2,6 @@ hostname: spine1
 router_bgp:
   as: '65001'
   router_id: 192.168.101.11
-  bgp_defaults:
-  - no bgp default ipv4-unicast
-  - distance bgp 20 200 200
   bgp:
     default:
       ipv4_unicast: false
@@ -45,18 +42,18 @@ router_bgp:
   - ip_address: 192.168.103.40
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    description: borderleaf1_Ethernet3
+    description: superspine1_Ethernet3
   - ip_address: 192.168.103.42
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    description: borderleaf2_Ethernet3
+    description: superspine2_Ethernet3
   - ip_address: 192.168.101.201
     peer_group: EVPN-OVERLAY-PEERS
-    description: borderleaf1
+    description: superspine1
     remote_as: '65000'
   - ip_address: 192.168.101.202
     peer_group: EVPN-OVERLAY-PEERS
-    description: borderleaf2
+    description: superspine2
     remote_as: '65000'
   - ip_address: 192.168.101.1
     peer_group: EVPN-OVERLAY-PEERS
@@ -71,7 +68,7 @@ router_bgp:
     - name: EVPN-OVERLAY-PEERS
       activate: true
 static_routes:
-- vrf: default
+- vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
   gateway: 192.168.0.1
 service_routing_protocols_model: multi-agent
@@ -84,19 +81,19 @@ vlan_internal_order:
 spanning_tree:
   mode: none
 vrfs:
-- name: default
+- name: MGMT
   ip_routing: false
 management_interfaces:
 - name: Management0
   description: oob_management
   shutdown: false
-  vrf: default
+  vrf: MGMT
   ip_address: 192.168.0.11/24
   gateway: 192.168.0.1
   type: oob
 management_api_http:
   enable_vrfs:
-  - name: default
+  - name: MGMT
   enable_https: true
 ethernet_interfaces:
 - name: Ethernet3
@@ -118,19 +115,19 @@ ethernet_interfaces:
   type: routed
   ip_address: 192.168.103.4/31
 - name: Ethernet7
-  peer: borderleaf1
+  peer: superspine1
   peer_interface: Ethernet3
   peer_type: super-spine
-  description: P2P_LINK_TO_BORDERLEAF1_Ethernet3
+  description: P2P_LINK_TO_SUPERSPINE1_Ethernet3
   shutdown: false
   mtu: 1500
   type: routed
   ip_address: 192.168.103.41/31
 - name: Ethernet8
-  peer: borderleaf2
+  peer: superspine2
   peer_interface: Ethernet3
   peer_type: super-spine
-  description: P2P_LINK_TO_BORDERLEAF2_Ethernet3
+  description: P2P_LINK_TO_SUPERSPINE2_Ethernet3
   shutdown: false
   mtu: 1500
   type: routed
