--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/spine3.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/spine3.yml
@@ -2,9 +2,6 @@ hostname: spine3
 router_bgp:
   as: '65002'
   router_id: 192.168.101.13
-  bgp_defaults:
-  - no bgp default ipv4-unicast
-  - distance bgp 20 200 200
   bgp:
     default:
       ipv4_unicast: false
@@ -36,42 +33,42 @@ router_bgp:
   neighbors:
   - ip_address: 192.168.103.9
     peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65102'
+    remote_as: '65299'
     description: leaf3_Ethernet5
   - ip_address: 192.168.103.13
     peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65102'
+    remote_as: '65299'
     description: leaf4_Ethernet5
   - ip_address: 192.168.103.48
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    description: borderleaf1_Ethernet5
+    description: superspine1_Ethernet5
   - ip_address: 192.168.103.50
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    description: borderleaf2_Ethernet5
+    description: superspine2_Ethernet5
   - ip_address: 192.168.101.201
     peer_group: EVPN-OVERLAY-PEERS
-    description: borderleaf1
+    description: superspine1
     remote_as: '65000'
   - ip_address: 192.168.101.202
     peer_group: EVPN-OVERLAY-PEERS
-    description: borderleaf2
+    description: superspine2
     remote_as: '65000'
   - ip_address: 192.168.101.3
     peer_group: EVPN-OVERLAY-PEERS
     description: leaf3
-    remote_as: '65102'
+    remote_as: '65299'
   - ip_address: 192.168.101.4
     peer_group: EVPN-OVERLAY-PEERS
     description: leaf4
-    remote_as: '65102'
+    remote_as: '65299'
   address_family_evpn:
     peer_groups:
     - name: EVPN-OVERLAY-PEERS
       activate: true
 static_routes:
-- vrf: default
+- vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
   gateway: 192.168.0.1
 service_routing_protocols_model: multi-agent
@@ -84,19 +81,19 @@ vlan_internal_order:
 spanning_tree:
   mode: none
 vrfs:
-- name: default
+- name: MGMT
   ip_routing: false
 management_interfaces:
 - name: Management0
   description: oob_management
   shutdown: false
-  vrf: default
+  vrf: MGMT
   ip_address: 192.168.0.13/24
   gateway: 192.168.0.1
   type: oob
 management_api_http:
   enable_vrfs:
-  - name: default
+  - name: MGMT
   enable_https: true
 ethernet_interfaces:
 - name: Ethernet5
@@ -118,19 +115,19 @@ ethernet_interfaces:
   type: routed
   ip_address: 192.168.103.12/31
 - name: Ethernet7
-  peer: borderleaf1
+  peer: superspine1
   peer_interface: Ethernet5
   peer_type: super-spine
-  description: P2P_LINK_TO_BORDERLEAF1_Ethernet5
+  description: P2P_LINK_TO_SUPERSPINE1_Ethernet5
   shutdown: false
   mtu: 1500
   type: routed
   ip_address: 192.168.103.49/31
 - name: Ethernet8
-  peer: borderleaf2
+  peer: superspine2
   peer_interface: Ethernet5
   peer_type: super-spine
-  description: P2P_LINK_TO_BORDERLEAF2_Ethernet5
+  description: P2P_LINK_TO_SUPERSPINE2_Ethernet5
   shutdown: false
   mtu: 1500
   type: routed
