--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/superspine1.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/superspine1.yml
@@ -2,9 +2,6 @@ hostname: superspine1
 router_bgp:
   as: '65000'
   router_id: 192.168.101.201
-  bgp_defaults:
-  - no bgp default ipv4-unicast
-  - distance bgp 20 200 200
   bgp:
     default:
       ipv4_unicast: false
@@ -71,7 +68,7 @@ router_bgp:
     - name: EVPN-OVERLAY-PEERS
       activate: true
 static_routes:
-- vrf: default
+- vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
   gateway: 192.168.0.1
 service_routing_protocols_model: multi-agent
@@ -84,19 +81,19 @@ vlan_internal_order:
 spanning_tree:
   mode: none
 vrfs:
-- name: default
+- name: MGMT
   ip_routing: false
 management_interfaces:
 - name: Management0
   description: oob_management
   shutdown: false
-  vrf: default
+  vrf: MGMT
   ip_address: 192.168.0.25/24
   gateway: 192.168.0.1
   type: oob
 management_api_http:
   enable_vrfs:
-  - name: default
+  - name: MGMT
   enable_https: true
 ethernet_interfaces:
 - name: Ethernet3
