--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -9126,7 +9126,10 @@ keys:
     keys:
       as:
         type: str
-        description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+        description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+
+          For asdot notation in YAML inputs, the value *must* be put in quotes to
+          prevent being interpreted as a float number.'
         convert_types:
         - int
       router_id:
@@ -9302,7 +9305,10 @@ keys:
               type: str
               convert_types:
               - int
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+
+                For asdot notation in YAML inputs, the value *must* be put in quotes
+                to prevent being interpreted as a float number.'
       peer_groups:
         type: list
         primary_key: name
@@ -9319,12 +9325,18 @@ keys:
               description: Key only used for documentation or validation purposes
             remote_as:
               type: str
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+
+                For asdot notation in YAML inputs, the value *must* be put in quotes
+                to prevent being interpreted as a float number.'
               convert_types:
               - int
             local_as:
               type: str
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+
+                For asdot notation in YAML inputs, the value *must* be put in quotes
+                to prevent being interpreted as a float number.'
               convert_types:
               - int
             description:
@@ -9537,12 +9549,18 @@ keys:
               type: str
             remote_as:
               type: str
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+
+                For asdot notation in YAML inputs, the value *must* be put in quotes
+                to prevent being interpreted as a float number.'
               convert_types:
               - int
             local_as:
               type: str
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+
+                For asdot notation in YAML inputs, the value *must* be put in quotes
+                to prevent being interpreted as a float number.'
               convert_types:
               - int
             as_path:
@@ -9728,6 +9746,10 @@ keys:
               type: str
               convert_types:
               - int
+              description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+
+                For asdot notation in YAML inputs, the value *must* be put in quotes
+                to prevent being interpreted as a float number.'
             peer:
               type: str
               description: Key only used for documentation or validation purposes
@@ -11077,8 +11099,11 @@ keys:
                       '
                   remote_as:
                     type: str
-                    description: BGP AS <1-4294967295> or AS number in asdot notation
-                      "<1-65535>.<0-65535>"
+                    description: 'BGP AS <1-4294967295> or AS number in asdot notation
+                      "<1-65535>.<0-65535>".
+
+                      For asdot notation in YAML inputs, the value *must* be put in
+                      quotes to prevent being interpreted as a float number.'
                     convert_types:
                     - int
             neighbors:
@@ -11096,8 +11121,11 @@ keys:
                     description: Peer-group name
                   remote_as:
                     type: str
-                    description: BGP AS <1-4294967295> or AS number in asdot notation
-                      "<1-65535>.<0-65535>"
+                    description: 'BGP AS <1-4294967295> or AS number in asdot notation
+                      "<1-65535>.<0-65535>".
+
+                      For asdot notation in YAML inputs, the value *must* be put in
+                      quotes to prevent being interpreted as a float number.'
                     convert_types:
                     - int
                   password:
@@ -11129,8 +11157,11 @@ keys:
                     - str
                   local_as:
                     type: str
-                    description: BGP AS <1-4294967295> or AS number in asdot notation
-                      "<1-65535>.<0-65535>"
+                    description: 'BGP AS <1-4294967295> or AS number in asdot notation
+                      "<1-65535>.<0-65535>".
+
+                      For asdot notation in YAML inputs, the value *must* be put in
+                      quotes to prevent being interpreted as a float number.'
                     convert_types:
                     - int
                   as_path:
@@ -11277,8 +11308,11 @@ keys:
                     description: Interface name
                   remote_as:
                     type: str
-                    description: BGP AS <1-4294967295> or AS number in asdot notation
-                      "<1-65535>.<0-65535>"
+                    description: 'BGP AS <1-4294967295> or AS number in asdot notation
+                      "<1-65535>.<0-65535>".
+
+                      For asdot notation in YAML inputs, the value *must* be put in
+                      quotes to prevent being interpreted as a float number.'
                     convert_types:
                     - int
                   peer_group:
