--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder1.cfg
@@ -196,6 +196,7 @@ ip security
 !
 interface Dps1
    description DPS Interface
+   mtu 9000
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 192.168.144.2/32
 !
