--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
@@ -219,6 +219,7 @@ ip security
 !
 interface Dps1
    description DPS Interface
+   mtu 9000
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 192.168.143.1/32
 !
