--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -372,6 +372,11 @@ keys:
             documentation_options:
               hide_keys: true
             $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+          ttl_maximum_hops:
+            type: int
+            convert_types:
+            - str
+            default: 1
       wan_rr_overlay_peers:
         type: dict
         documentation_options:
@@ -399,6 +404,11 @@ keys:
             documentation_options:
               hide_keys: true
             $ref: eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/
+          ttl_maximum_hops:
+            type: int
+            convert_types:
+            - str
+            default: 1
       IPv4_UNDERLAY_PEERS:
         type: dict
         deprecation:
