--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/bgp_peer_groups.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/bgp_peer_groups.schema.yml
@@ -178,6 +178,11 @@ keys:
             documentation_options:
               hide_keys: true
             $ref: "eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/"
+          ttl_maximum_hops:
+            type: int
+            convert_types:
+              - str
+            default: 1
       wan_rr_overlay_peers:
         type: dict
         documentation_options:
@@ -203,6 +208,11 @@ keys:
             documentation_options:
               hide_keys: true
             $ref: "eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/"
+          ttl_maximum_hops:
+            type: int
+            convert_types:
+              - str
+            default: 1
       IPv4_UNDERLAY_PEERS:
         type: dict
         deprecation:
