Refactor to use existing AVD logic for ECL-EVPN-SOO

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit.cfg
@@ -304,7 +304,7 @@ no ip routing vrf MGMT
 ip routing vrf PROD
 ip routing vrf TRANSIT
 !
-ip extcommunity-list ECL-WAN-HA-SOO permit soo 192.168.43.1:422
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.43.1:422
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.43.0/24 eq 32
@@ -319,10 +319,10 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
    description Advertise local routes towards LAN
-   match extcommunity ECL-WAN-HA-SOO
+   match extcommunity ECL-EVPN-SOO
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
-   description Advertise routes received from WAN towards LAN
+   description Advertise routes received from WAN iBGP towards LAN
    match route-type internal
 !
 route-map RM-CONN-2-BGP permit 10
@@ -330,7 +330,15 @@ route-map RM-CONN-2-BGP permit 10
    set extcommunity soo 192.168.43.1:422 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
-   match extcommunity ECL-WAN-HA-SOO
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-EVPN-SOO-IN deny 10
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-EVPN-SOO-IN permit 20
+!
+route-map RM-EVPN-SOO-OUT permit 10
+   set extcommunity soo 192.168.43.1:422 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -357,6 +365,8 @@ router bgp 65000
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
+      neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
+      neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
    !
    address-family ipv4
