--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -99,6 +99,8 @@ router_bgp:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
       activate: true
+      route_map_in: RM-EVPN-SOO-IN
+      route_map_out: RM-EVPN-SOO-OUT
   address_family_ipv4_sr_te:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -208,11 +210,6 @@ as_path:
     entries:
     - type: permit
       match: '65000'
-ip_extcommunity_lists:
-- name: ECL-WAN-HA-SOO
-  entries:
-  - type: permit
-    extcommunities: soo 192.168.42.1:511
 prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
@@ -245,18 +242,32 @@ route_maps:
     type: permit
     description: Advertise local routes towards LAN
     match:
-    - extcommunity ECL-WAN-HA-SOO
+    - extcommunity ECL-EVPN-SOO
   - sequence: 20
     type: permit
-    description: Advertise routes received from WAN towards LAN
+    description: Advertise routes received from WAN iBGP towards LAN
     match:
     - route-type internal
+- name: RM-EVPN-SOO-IN
+  sequence_numbers:
+  - sequence: 10
+    type: deny
+    match:
+    - extcommunity ECL-EVPN-SOO
+  - sequence: 20
+    type: permit
+- name: RM-EVPN-SOO-OUT
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    set:
+    - extcommunity soo 192.168.42.1:511 additive
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
     type: permit
     match:
-    - extcommunity ECL-WAN-HA-SOO
+    - extcommunity ECL-EVPN-SOO
 flow_tracking:
   hardware:
     trackers:
@@ -271,6 +282,11 @@ flow_tracking:
         local_interface: Loopback0
         template_interval: 5000
     shutdown: false
+ip_extcommunity_lists:
+- name: ECL-EVPN-SOO
+  entries:
+  - type: permit
+    extcommunities: soo 192.168.42.1:511
 ip_security:
   ike_policies:
   - name: CP-IKE-POLICY
