--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
@@ -136,14 +136,25 @@ ip routing vrf IT
 no ip routing vrf MGMT
 ip routing vrf PROD
 !
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.30.1:0
+!
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.30.0/24 eq 32
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+   set extcommunity soo 192.168.30.1:0 additive
 !
-route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 30
-   match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-EVPN-SOO-IN deny 10
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-EVPN-SOO-IN permit 20
+!
+route-map RM-EVPN-SOO-OUT permit 10
+   set extcommunity soo 192.168.30.1:0 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -167,6 +178,8 @@ router bgp 65000
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
+      neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
+      neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
    !
    address-family ipv4
