--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -903,7 +903,7 @@ keys:
                     - "system-connected"
                     - "tunnel-rib-colored"
                     - "tunnel-rib"
-                  description: "Type of RIB, one of system-connect|tunnel-rib-colored|tunnel-rib. For 'tunnel-rib', use 'rib_name' to specify the name of the Tunnel-RIB to use. Use 'tunnel-rib-colored' for 'tunnel-rib colored system-colored-tunnel-rib'"
+                  description: "Type of RIB. For 'tunnel-rib', use 'rib_name' to specify the name of the Tunnel-RIB to use."
                 rib_name:
                   type: str
                   description: "The name of the tunnel-rib to use when using 'tunnel-rib' type."
